<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="meet_eat.app.fragment.main.profile.ProfileEditFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgFragment">

        <ImageButton
            android:id="@+id/ibtBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:elevation="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_back"
            android:tint="@color/bgButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description_back_button" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibtBack">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- PROFILE IMAGE -->
                <FrameLayout
                    android:id="@+id/peFrameLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivProfileEditProfile"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        android:elevation="4dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/profile_standard"
                        android:contentDescription="@string/content_description_profile_edit_image" />

                    <ImageButton
                        android:id="@+id/ibtProfileEditAdd"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom|end"
                        android:adjustViewBounds="true"
                        android:background="@drawable/bg_button"
                        android:backgroundTint="@color/symbol"
                        android:elevation="5dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/add"
                        android:tint="@android:color/black"
                        android:contentDescription="@string/content_description_profile_edit_image_button" />
                </FrameLayout>

                <TextView
                    android:id="@+id/tvProfileEditEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:elevation="5dp"
                    android:shadowColor="@android:color/black"
                    android:shadowRadius="10"
                    android:singleLine="true"
                    android:text="@string/e_mail"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/peFrameLayout1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvProfileEditUsername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:elevation="5dp"
                    android:shadowColor="@android:color/black"
                    android:shadowRadius="10"
                    android:text="@string/username"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/peFrameLayout1"
                    app:layout_constraintTop_toBottomOf="@+id/tvProfileEditEmail" />

                <TextView
                    android:id="@+id/tvProfileEditBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:elevation="5dp"
                    android:shadowColor="@android:color/black"
                    android:shadowRadius="10"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvProfileEditUsername" />

                <EditText
                    android:id="@+id/etProfileEditOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints="password"
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.oldPasswordString}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/peBarrier1" />

                <EditText
                    android:id="@+id/etProfileEditNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints="newPassword"
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.newPasswordString}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etProfileEditOldPassword" />

                <EditText
                    android:id="@+id/etProfileEditPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints="newPassword"
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:hint="@string/password_confirm"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.passwordConfirm}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etProfileEditNewPassword" />

                <Button
                    android:id="@+id/btProfileEditChangePassword"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_button"
                    android:elevation="5dp"
                    android:text="@string/change_password"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etProfileEditPasswordConfirm" />

                <EditText
                    android:id="@+id/etProfileEditPhone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints="phoneNumber"
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.phone}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btProfileEditChangePassword" />

                <EditText
                    android:id="@+id/etProfileEditHome"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:layout_marginTop="51dp"
                    android:autofillHints="postalAddress"
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:hint="@string/home"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.home}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etProfileEditPhone" />

                <EditText
                    android:id="@+id/etProfileEditDescription"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="16dp"
                    android:autofillHints=""
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:gravity="top|start"
                    android:hint="@string/profile_description"
                    android:inputType="textMultiLine"
                    android:maxLength="300"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.description}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etProfileEditHome" />

                <Button
                    android:id="@+id/btProfileEditSave"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_button"
                    android:elevation="5dp"
                    android:text="@string/save"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etProfileEditDescription" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/peBarrier1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierAllowsGoneWidgets="false"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="peFrameLayout1,tvProfileEditEmail,tvProfileEditUsername,tvProfileEditBirthday" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>