...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_profile"
            android:title="@string/drawer_menu_profile"
            android:icon="@drawable/ic_profile"
            android:iconTint="@color/colorPrimary"
            android:iconTintMode="src_in"/>
        <item
            android:id="@+id/drawer_menu_main_offers"
...
