...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/ibtProfileEdit"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:elevation="5dp"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/content_description_edit_profile_button" />

                <!-- REPORT -->
                <ImageButton
                    android:id="@+id/ibtProfileReport"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:elevation="5dp"
...
