...
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibtBack" />

        <EditText
            android:id="@+id/etProfileReportMessage"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:background="@drawable/bg_edit_text"
            android:elevation="5dp"
...
            android:textColorHint="@color/textHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProfileReportInfo" />

        <Button
            android:id="@+id/btProfileReport"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_button"
            android:elevation="5dp"
            android:text="@string/report"
...
