...
                        android:scaleType="fitCenter"
                        android:src="@drawable/profile_standard"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvOfferDetailedCity" />

                    <TextView
                        android:id="@+id/tvOfferDetailedUsername"
                        android:layout_width="0dp"
                        android:layout_height="28dp"
                        android:layout_margin="16dp"
                        android:clickable="true"
                        android:elevation="5dp"
                        android:shadowColor="@android:color/black"
...
